--- a/Gym/nbproject/private/private.properties
+++ b/Gym/nbproject/private/private.properties
@@ -1,6 +1,9 @@
 deploy.ant.properties.file=C:\\Users\\yerky vargas\\AppData\\Roaming\\NetBeans\\17\\tomcat90.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/Estudiantes/GlassFish_Server/glassfish/domains/domain1
 j2ee.server.home=C:/tomcat/apache-tomcat-9.0.87-windows-x64 (1)/apache-tomcat-9.0.87
 j2ee.server.instance=tomcat90:home=C:\\tomcat\\apache-tomcat-9.0.87-windows-x64 (1)\\apache-tomcat-9.0.87
+j2ee.server.middleware=C:/Users/Estudiantes/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
