--- a/asdgym/nbproject/private/private.properties
+++ b/asdgym/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\estudiantes\\AppData\\Roaming\\NetBeans\\14\\tomcat80.properties
-j2ee.server.home=C:/xampp/tomcat
-j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
+deploy.ant.properties.file=C:\\Users\\yerky vargas\\AppData\\Roaming\\NetBeans\\17\\tomcat90.properties
+j2ee.server.home=C:/tomcat/apache-tomcat-9.0.87-windows-x64 (1)/apache-tomcat-9.0.87
+j2ee.server.instance=tomcat90:home=C:\\tomcat\\apache-tomcat-9.0.87-windows-x64 (1)\\apache-tomcat-9.0.87
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\estudiantes\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\yerky vargas\\AppData\\Roaming\\NetBeans\\17\\build.properties
